# job-submission-system

./: CMakeLists.txt  Client  DESIGN_DOCUMENT.txt  Makefile  README.md  Server  design.docx
Client.dSYM/Contents/Resources/DWARF/: Client
Server.dSYM/Contents/Resources/DWARF/: Server
include/: ClientList.h  constants.h  protocols.h  server.h
src/client/: client  client.c
src/server/: ClientList.c  server  server.c
